@@ -54,6 +54,7 @@ import java.util.stream.Stream;
  */
 public class DriverRemoteAcceptor implements RemoteAcceptor {
     public static final int NO_TIMEOUT = 0;
+    public static final String USER_AGENT = "Gremlin Console";
 
     private Cluster currentCluster;
     private Client currentClient;
@@ -208,6 +209,8 @@ public class DriverRemoteAcceptor implements RemoteAcceptor {
             aliases.forEach(options::addAlias);
             if (timeout > NO_TIMEOUT)
                 options.timeout(timeout);
+
+            options.userAgent(USER_AGENT);
 
             final ResultSet rs = this.currentClient.submit(gremlin, options.create());
             final List<Result> results = rs.all().get();
